--- a/hello.qmd
+++ b/hello.qmd
@@ -6,6 +6,16 @@ format:
 jupyter: python3
 ---
 
+
+# Heading1
+something...
+
+## Heading2
+somthing...
+
+### Heading3
+something...
+
 For a demonstration of a line plot on a polar axis, see @fig-polar.
 
 ```{python}
@@ -25,12 +35,6 @@ ax.set_rticks([0.5, 1, 1.5, 2]);
 ax.grid(True);
 plt.show()
 ```
-# Heading1
-something...
 
-## Heading2
-somthing...
-
-### Heading3
-something...
+This is perfect!
 
