--- a/test/hello.qmd
+++ b/test/hello.qmd
@@ -8,12 +8,18 @@ jupyter: python3
 
 
 # Heading1
-something...
 
-## Heading2
-somthing...
 
-### Heading3
+
+## Heading2-1
+
+
+
+## Heading2-2
+
+
+
+### Heading3-1
 something...
 
 For a demonstration of a line plot on a polar axis, see @fig-polar.
@@ -38,7 +44,10 @@ For a demonstration of a line plot on a polar axis, see @fig-polar.
 
 This is perfect!
 
-Some latex math:
+
+### Heading3-2
+
+# Some latex math equations
 
 $a^2 + b^2 + c^2$
 
@@ -58,23 +67,17 @@ $\sqrt{\frac{1}{2}}$
 
 $f_a(\frac{2}{x})$
 
-
 $\sum_i^{\infty} x_i^2$
-
 
 $\alpha_{\omega}(x)$
 
 $\begin{matrix} x^2 & a_H \\ \frac{1}{2} & d^2 \end{matrix}$
 
-
 $\int_0^{\infty} \frac{1}{x}\, dx$
-
 
 $\frac{dx}{df(x)} + \frac{dy}{df(y)}\, =\, 2$
 
-
 $\frac{\partial x}{\partial f(x)} + \frac{\partial y}{\partial f(y)} = 2$
-
 
 $\delta (x) = 2$
 
