--- a/test/hello.qmd
+++ b/test/hello.qmd
@@ -2,7 +2,9 @@
 title: "Quarto Basics"
 format:
   html:
-    code-fold: true
+    code-fold: false
+    code-line-numbers: true
+    theme: darkly
 jupyter: python3
 ---
 
@@ -20,26 +22,24 @@ jupyter: python3
 
 
 ### Heading3-1
-something...
 
-For a demonstration of a line plot on a polar axis, see @fig-polar.
 
 ```{python}
 #| label: fig-polar
 #| fig-cap: "A line plot on a polar axis"
 
-# import numpy as np
-# import matplotlib.pyplot as plt
-#
-# r = np.arange(0, 2, 0.01)
-# theta = 2 * np.pi * r
-# fig, ax = plt.subplots(
-#   subplot_kw = {'projection': 'polar'} 
-# )
-# ax.plot(theta, r);
-# ax.set_rticks([0.5, 1, 1.5, 2]);
-# ax.grid(True);
-# plt.show()
+import numpy as np
+import matplotlib.pyplot as plt
+
+r = np.arange(0, 2, 0.01)
+theta = 2 * np.pi * r
+fig, ax = plt.subplots(
+  subplot_kw = {'projection': 'polar'}
+)
+ax.plot(theta, r);
+ax.set_rticks([0.5, 1, 1.5, 2]);
+ax.grid(True);
+plt.show()
 ```
 
 This is perfect!
@@ -48,6 +48,23 @@ This is perfect!
 ### Heading3-2
 
 # Some latex math equations
+
+$$
+\begin{alignat}{1}
+\overline{ \boldsymbol{\hat{y}}}
+&=
+\bigg(\frac{\partial \mathcal{L}}{\partial\boldsymbol{
+\hat{y}}}\bigg)^\top  
+\overline{\mathcal{L}} \\
+&=\big(J_{g(\boldsymbol
+{\hat{y}} ,\boldsymbol
+{y})\text{ w.r.t }\boldsymbol
+{\hat{y}}} \big)
+^\top \overline{\mathcal{L}}
+\end{alignat} 
+$$
+
+$$H=\sum_{k=1}^{\infty} \pi_k \cdot\delta(x-\theta_k)$$
 
 $a^2 + b^2 + c^2$
 
@@ -100,3 +117,4 @@ $s^{N_2}_+ [n]$
 $\frac{1}{2\xi \sqrt{1+\xi^2}}$
 
 $1\: + 2$
+
