--- a/test/hello.qmd
+++ b/test/hello.qmd
@@ -44,7 +44,6 @@ plt.show()
 
 This is perfect!
 
-
 ### Heading3-2
 
 # Some latex math equations
@@ -114,7 +113,7 @@ $Cr_2O_7^2$
 
 $s^{N_2}_+ [n]$
 
-$\frac{1}{2\xi \sqrt{1+\xi^2}}$
+$\frac{1}{2\beta \sqrt{1+\beta^2}}$
 
 $1\: + 2$
 
