--- a/test/hello.qmd
+++ b/test/hello.qmd
@@ -31,12 +31,12 @@ jupyter: python3
 import numpy as np
 import matplotlib.pyplot as plt
 
-r = np.arange(0, 2, 0.01)
-theta = 2 * np.pi * r
+aaa = np.arange(0, 2, 0.01)
+theta = 2 * np.pi * aaa
 fig, ax = plt.subplots(
   subplot_kw = {'projection': 'polar'}
 )
-ax.plot(theta, r);
+ax.plot(theta, aaa);
 ax.set_rticks([0.5, 1, 1.5, 2]);
 ax.grid(True);
 plt.show()
